<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_c"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/category"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="Megapanel"
            android:textAllCaps="true"
            android:textColor="#FFFF00"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/language"
            android:layout_width="25dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/baseline_language_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/baseline_notifications_none_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/language"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/second_title"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/eng_qulay_va_sifatli_smm_foydalanish"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_c" />

    <TextView
        android:id="@+id/third_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tez_va_oson"
        android:textColor="#80C7F8"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/second_title"
        app:layout_constraintRight_toRightOf="@id/second_title"
        app:layout_constraintTop_toBottomOf="@id/second_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/third_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/add_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="30dp"
                    android:layout_weight="1"

                    android:background="@drawable/btn"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/add" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="@string/qo_shilish"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/order_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn"

                      android:clickable="true"
                    android:focusable="true"

                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/f" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="@string/tezkor_buyurtma"
                        android:textColor="@color/white"
                        android:textSize="20sp" />


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/xizmatlar"
                   android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn"
                    android:clickable="true"
                    android:focusable="true"

                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/c" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="@string/xizmatlar"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/avzalliklar"
 android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/diamond" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="@string/avzalliklar"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>